fix: preloading digit images, to remove flickering

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,14 @@
 
 	background-color: lightblue;
 }
+
+#preload {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0;
+	height: 0;
+	pointer-events: none;
+	z-index: -1000000000;
+}
